--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dm-tree==0.1.8
+gunicorn==21.2.0
 filelock==3.13.1
 Flask==3.0.2
 Flask-Cors==4.0.0
